# LLMs-multi-step-research-agents

./: .gitignore  AGENTS.md  PROJECT_DOSSIER.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment_proposal.md
asar/: __init__.py
asar/common/: __init__.py  config.py  ids.py  logging.py
asar/core/: __init__.py  errors.py  llm.py  protocols.py  result.py  search.py
asar/deliberation/: __init__.py  claim_selector.py  mechanism_bundler.py  mechanism_sketcher.py  mechanism_slate_selector.py  mechanism_slot_builder.py  simple_synthesizer.py  support_attributor.py
asar/demo/: __init__.py  __main__.py  run.py  (+1 more)
config/: experiments.toml  models.toml  pipeline.toml  project.toml
deliverable/: README.md  demo_runbook.md  documentation.md  presentation.md  presentation.pptx  results.md  rubric_check.md
docs/: llm_assignment_progress.md  rag_dataset_chunking_vector_db_strategy.md
schemas/: __init__.py  _timestamps.py  candidate_claim_set.py  citation_record.py  decision_packet.py  evidence_item.py  experiment_record.py  research_output.py  research_plan.py  task_packet.py  verification_result.py
scripts/: build_sft_dataset.py  dpo_train.py  finetune_lora.py
tasks/: backlog.md  next_steps.md  phase_00_bootstrap.md  v1_1_grounded_selection_plan.md  v1_2_mechanism_bundling_plan.md  v1_3_mechanism_sketching_plan.md  v1_4_slot_grounded_drafting_plan.md  v1_5_mechanism_slate_selection_plan.md  v1_minimal_plan.md
tests/: test_claim_selector.py  test_common_foundations.py  test_deliberation.py  test_demo.py  test_dpo_dataset.py  test_evaluation.py  test_execution.py  test_live_providers.py  test_local_llm.py  test_mechanism_bundler.py  test_mechanism_sketcher.py  test_mechanism_slate_selector.py  test_mechanism_slot_builder.py  test_memory_foundations.py  test_orchestration.py  test_planning.py  test_rag.py  test_safety.py  test_schemas.py  test_support_attributor.py  test_v0_integration.py  test_verification.py
webapp/: README.md  run-backend.sh  run-dev.sh
(+482 files in other folders)
