[project]
name = "asar"
version = "0.1.0"
description = "Agentic Structured Autonomous Researcher — a neuro-symbolic multi-step research agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.9",
]
rag = [
    "qdrant-client>=1.9",
    "fastembed>=0.3",
    "rank-bm25>=0.2.2",
    "datasets>=2.18",
    "huggingface-hub>=0.23",
]
safety = [
    "detoxify>=0.5.2",
]
local-llm = [
    "transformers>=4.42",
    "torch>=2.2",
    "peft>=0.11",
    "trl>=0.9",
    "datasets>=2.18",
    "accelerate>=0.30",
]
mlx = [
    "mlx>=0.15",
    "mlx-lm>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["asar", "schemas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
